<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.planarportal.simplephone.MainActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help"
        android:textSize="16dp" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="12dp"
        android:text="@string/pickContact" />

    <TextView
        android:id="@+id/pickedContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnSearch"
        android:layout_below="@+id/btnSearch"
        android:text="@string/noContact"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/pickedPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pickedContact"
        android:layout_below="@+id/pickedContact"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/btnCall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pickedPhone"
        android:layout_below="@+id/pickedPhone"
        android:layout_marginTop="12dp"
        android:text="@string/callContact" />

    <Button
        android:id="@+id/btnMMS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnSee"
        android:layout_below="@+id/btnSee"
        android:text="@string/sendMMS" />

    <Button
        android:id="@+id/btnSMS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnCall"
        android:layout_below="@+id/btnConv"
        android:text="@string/sendSMS" />

    <Button
        android:id="@+id/btnConv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnCall"
        android:layout_below="@+id/btnCall"
        android:layout_marginTop="16dp"
        android:text="@string/readContact" />

    <Button
        android:id="@+id/btnTake"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnCall"
        android:layout_below="@+id/btnSMS"
        android:layout_marginTop="16dp"
        android:text="@string/takePicture" />

    <Button
        android:id="@+id/btnSee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnCall"
        android:layout_below="@+id/btnTake"
        android:text="@string/seePicture" />

</RelativeLayout>